# Net-Simulation

./: .gitignore
Symulacja sieci/: .gitignore  CMakeLists.txt  main.cpp
Symulacja sieci/Factory Package/: Factory.hpp  NodeCollection.hpp
Symulacja sieci/Node Package/: Storehouse.hpp  Worker.hpp
Symulacja sieci/include/: DrawNumber.h  Factory.hpp  IPackageQueue.hpp  IPackageReceiver.hpp  IPackageStockpile.hpp  IReportNotifier.hpp  NodeCollection.hpp  Package.hpp  PackageQueue.hpp  PackageSender.hpp  QueueType.hpp  Ramp.hpp  ReceiverPreferences.hpp  ReceiverType.hpp  Simulation.hpp  Storehouse.hpp  Worker.hpp  data_type.hpp  factory_IO.hpp  reporting.hpp
Symulacja sieci/src/: Factory.cpp  IReportNotifier.cpp  Package.cpp  PackageQueue.cpp  PackageSender.cpp  Ramp.cpp  ReceiverPreferences.cpp  Simulation.cpp  Storehouse.cpp  Worker.cpp  factory_IO.cpp  reporting.cpp
Symulacja sieci/test/: main_test.cpp  test_factory.cpp  test_node_collection.cpp  test_package.cpp  test_package_queue.cpp  test_package_sender.cpp  test_package_test.cpp  test_ramp.cpp  test_receiver.cpp  test_simulate.cpp  test_storehouse.cpp  test_worker.cpp
docs/: uml__4b_4.txt  uml_k.txt
